# TwitterWatch

./: README.md  Twitter_Watch.ipynb  Untitled.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
TwitterWatch/: __init__.py  twitterwatch.py
examples/: Twitter_Watch.ipynb
tests/: conftest.py  test_twitterwatch.py
