[metadata]
name = TwitterWatch
description = Scraper and sentiment analysis for Twitter
author = Nargess Heydari
platforms = unix, linux, osx, cygwin, win32
classifiers=
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    TwitterWatch
install_requires =
    snscrape>=0.6.1
    transformers>=4.27.1
    pandas>=1.5.3
    numpy>=1.24.2
    more-itertools>=9.1.0
    tensorflow>=2.0.0


python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    mypy>=0.991
    flake8>=6.0.0
    tox>=4.0.5
examples = 
    matplotlib>=3.7.1
    seaborn>=0.12.2
    jupyter==1.0.0

[options.package_data]
xanaduScheduler = py.typed

[flake8]
extend-ignore = E203,E501,W503

[mypy]
plugins = numpy.typing.mypy_plugin